{{$NEXT}}

0.26     2016-09-24

- Require Role::Tiny 1.003003. This should fix the test failures some
  CPANTesters reported with this error:

    Can't resolve method "???" overloading "&{}" in package
    "Specio::Constraint::Simple" at Specio::Constraint::Simple->new line 35.


0.25     2016-09-04

- Calling {any,object}_{isa,does}_type repeatedly in a package with the same
  class or role name would die. These subs are now special-cased to simply
  return an existing type for the given name when they receive a single
  argument (the name of the class or role). This could come up if you had two
  attributes both of which required an object of the same type.


0.24     2016-06-20

- Fix a bizarre failure on Perl before 5.14. AFAICT this was a test problem,
  not a library problem.


0.23     2016-06-20

- Added intersection types.


0.22     2016-06-18

- Require version.pm 0.83. I know 0.77 doesn't work but I'm not sure exactly
  which version fixed the problem, since I cannot install older
  versions. Reported by Slaven Rezic. RT #115418.


0.21     2016-06-18

- Don't load Sub::Quote, but use it if it's already loaded. Since Moo uses it,
  this should make Specio constraints just work with Moo.


0.20     2016-06-18

- Removed test dependency on namespace::autoclean.


0.19     2016-06-17

- Removed dependency on Devel::PartialDump by making a copy of just the bits
  we need. Gross but effective.


0.18     2016-06-15

- Added union types.

- If a subtype's parent could be inlined and the subtype itself did not
  specify any additional constraints (inlinable or not), then the subtype was
  not being inlined, even though it could be.

- This distro now works with Perl 5.8 (though it was only tested with 5.8.8).


0.17     2016-06-01

- Change "use v5.10" to "use 5.010". The former appears to cause warnings on
  older Perls.


0.16     2016-05-30

- Remove use of Class::Load and Module::Runtime.


0.15     2016-05-30
