@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+- Cloning a type with coercions defined on it would cause an exception.
+
+
 0.26     2016-09-24
 
 - Require Role::Tiny 1.003003. This should fix the test failures some
